# static_vector

./: .gitignore  CMakeLists.txt  LICENSE  README
benchmarks/: CMakeLists.txt  plot_results.py  static_vector_benchmark.cpp
cmake/: googlebenchmark.cmake  googletest.cmake
include/: static_vector.h
tests/: CMakeLists.txt  test_static_vector.cpp
